update levels of hunger, sleepiness, and happiness to decrease when button is clicked, updated css, and html

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,22 +7,37 @@ body {
     background-color: #464646;
 }
 
-/* .pixelegg {
-    transform: translate(20px, 10px);
-} */
-
 main {
-    background-image: url("https://cdn1.vectorstock.com/i/1000x1000/19/25/pixel-art-game-background-with-blue-sky-and-clouds-vector-27801925.jpg");
+    background-image: url("https://cutewallpaper.org/21/pixel-wallpaper-gif/46-Animated-Pixel-Wallpaper-on-WallpaperSafari.gif");
     color: palevioletred;
-    font-family: 'Original Surfer', cursive;
+    font-family: 'VT323', monospace;
+    font-size: 20px;
     text-align: center;
     border: solid 5px;
     border-radius: 5px;
     padding: 5px;
     width: 600px;
-    height: 500px;
+    height: 550px;
 
 }
+
+/* Source for glowy-text https://www.w3schools.com/howto/howto_css_glowing_text.asp */
+.title {
+    margin: 15px;
+    -webkit-animation: glow 1s ease-in-out infinite alternate;
+  -moz-animation: glow 1s ease-in-out infinite alternate;
+  animation: glow 1s ease-in-out infinite alternate;
+
+}
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px blue, 0 0 30px , 0 0 40px blue, 0 0 50px blue, 0 0 60px blue, 0 0 70px blue;
+    }
+    to {
+      text-shadow: 0 0 20px #fff, 0 0 30px blue, 0 0 40px blue, 0 0 50px blue, 0 0 60px blue, 0 0 70px blue, 0 0 80px blue;
+    }
+  }
+
 
 .healthmeter {
     display: flex;
@@ -32,8 +47,17 @@ main {
     
 }
 
+.pixelegg {
+    margin: 25px;
+}
+
+#name {
+    margin: 10px;
+}
+
 .lilo-main {
     padding: auto;
+    max-height: 25vh;
 }
 
 .main-selection {
@@ -50,13 +74,24 @@ main {
 
 .lilo-main {
     margin-top: 20px;
-    /* position: relative;
-    left: 60px;
-    bottom: 65px; */
 }
 
-
-#play {
-    margin-bottom: 50px;
+#lilo-swimming {
+    margin: 20px;
 }
 
+#naniMessage {
+    font-size: 20px;
+}
+
+.lilo-sass {
+    width: 300px;
+}
+
+.home {
+    margin: 20px;
+}
+
+.rick {
+    margin: 50px;
+}
